fix: update product in cart
