# internal/model/order.go
@@ -4,13 +4,12 @@ import (
 	"time"
 
 	"go.mongodb.org/mongo-driver/bson/primitive"
-	"github.com/Dongy-s-Advanture/back-end/internal/dto"
 )
 
 type Order struct {
 	OrderID       primitive.ObjectID `json:"orderID,omitempty" bson:"_id,omitempty"`
 	Status        int16              `json:"status" bson:"status"`
-	Products      []dto.OrderProduct  `json:"products" bson:"products"`
+	Products      []OrderProduct  `json:"products" bson:"products"`
 	AppointmentID primitive.ObjectID `json:"appointmentID" bson:"appointmentID"`
 	SellerID      primitive.ObjectID `json:"sellerID" bson:"sellerID"`
 	SellerName    string             `json:"sellerName" bson:"sellerName"`
@@ -20,4 +19,10 @@ type Order struct {
 	CreatedAt     time.Time          `json:"createdAt" bson:"createdAt"`
 	Payment     string               `json:"payment" bson:"payment"`
 }
+
+type OrderProduct struct {
+	ProductID primitive.ObjectID    `json:"productID" bson:"_id"`
+	Amount  int                     `json:"amount" bson:"amount" binding:"required,gte=0"`
+}
+ 
 
